--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dji-log-parser": "0.0.4",
     "dotenv": "^5.0.1",
     "firebase": "^4.12.1",
     "react": "^16.3.1",
