--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^5.0.1",
     "firebase": "^4.12.1",
     "react": "^16.3.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
